# 2022-10-23-nHentai-to-PDF-Server

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  readme.typ  requirements.txt
.github/workflows/: on tag deploy on Github.yaml
config/: settings.json
src/: get_hentai_ID_list.py  main.py  main_outer.py
tests/: test_get_hentai_ID_list.py
