[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "x"                                                        # can't leave empty because of bug with `poetry install` from poetry.lock file
readme      = "readme.md"
repository  = "https://github.com/9-FS/2022-10-23-nHentai-to-PDF-Server"
version     = "2.2.3"

[tool.poetry.dependencies]
kfsconfig  = "^1.0.0"
kfsfstr    = "^1.0.0"
kfslog     = "^1.0.0"
kfsmedia   = "^2.1.0"
kfssleep   = "^1.0.0"
python     = "^3.11.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.87.0"
pytest     = "^7.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
