[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "MIT"
name        = "x"                                                        # can't leave empty because of bug with `poetry install` from poetry.lock file
readme      = "readme.md"
repository  = "https://github.com/9-FS/2022-10-23-nHentai-to-PDF-Server"
version     = "3.1.1"

[tool.poetry.dependencies]
kfsconfig = "^1.0.0"
kfsfstr   = "^1.0.0"
kfslog    = "^1.0.0"
kfsmedia  = "^2.5.1"
kfssleep  = "^1.0.0"
python    = "^3.12.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.0.0"
pytest     = "^7.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
